plugins {
    id 'java'
    id 'com.gradleup.shadow' version '8.3.1'
}

group = 'ru.realite'
version = '1.0.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
    maven { url = 'https://repo.papermc.io/repository/maven-public/' }
}

dependencies {
    compileOnly "io.papermc.paper:paper-api:1.21.1-R0.1-SNAPSHOT"
    compileOnly project(":RealiteCore")
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release = 21
}

tasks.jar {
    enabled = true
    archiveClassifier.set("plain") // чтобы не конфликтовать с shadowJar
}

tasks.shadowJar {
    archiveClassifier.set("")
}

tasks.build {
    dependsOn tasks.shadowJar
}
